--- a/html/reservation.html
+++ b/html/reservation.html
@@ -17,47 +17,18 @@
         <header id="navbar" onload="headerAndFooter()">    
         </header>
         <h2 class="formreservation" id="dest"></h2>
-        <div class="totalform">
         <div class="imgetform">
-        <h3 id="prix"></h3>
-        <img id ="image_dest" class="img_lieu" src="">
-        </div>
+            <img id ="image_dest" class="img_lieu" src="">
+            <h3 id="prix"></h3>
         </div>
         <div id="desc">
-        <h2 >Details :</h2>
+            <h2 >Details du produit :</h2>
         </div>
         <div class="description">
             <div id="explication">
-                <h4>Description du produit.</h4>
-                <p id = "description_produit">
-
-                    Quam ob rem ut ii qui superiores sunt submittere se debent in amicitia, sic quodam modo inferiores extollere. 
-                    Sunt enim quidam qui molestas amicitias faciunt, cum ipsi se contemni putant; quod non fere contingit nisi iis qui 
-                    etiam contemnendos se arbitrantur; qui hac opinione non modo verbis sed etiam opere levandi sunt.
-                    <br>
-                    Nec piget dicere avide magis hanc insulam populum Romanum invasisse quam iuste. Ptolomaeo enim rege 
-                    foederato nobis et socio ob aerarii nostri angustias iusso sine ulla culpa proscribi ideoque hausto veneno 
-                    voluntaria morte deleto et tributaria facta est et velut hostiles eius exuviae classi inpositae in urbem 
-                    advectae sunt per Catonem, nunc repetetur ordo gestorum.
-                    <br>
-                    Itaque tum Scaevola cum in eam ipsam mentionem incidisset, exposuit nobis sermonem Laeli de amicitia habitum 
-                    ab illo secum et cum altero genero, C. Fannio Marci filio, paucis diebus post mortem Africani. 
-                    Eius disputationis sententias memoriae mandavi, quas hoc libro exposui arbitratu meo; quasi enim ipsos 
-                    induxi loquentes, ne 'inquam' et 'inquit' saepius interponeretur, atque ut tamquam a praesentibus coram haberi sermo videretur.
-                    <br>
-                    Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis, iudices, 
-                    nec descensurum quemquam ad hanc accusationem fuisse, cui, utrum vellet, liceret, nec, cum descendisset, 
-                    quicquam habiturum spei fuisse, nisi alicuius intolerabili libidine et nimis acerbo odio niteretur. 
-                    Sed ego Atratino, humanissimo atque optimo adulescenti meo necessario, ignosco, qui habet excusationem vel 
-                    pietatis vel necessitatis vel aetatis. Si voluit accusare, pietati tribuo, si iussus est, necessitati, si 
-                    speravit aliquid, pueritiae. Ceteris non modo nihil ignoscendum, sed etiam acriter est resistendum.
-                    <br>
-                    Ergo ego senator inimicus, si ita vultis, homini, amicus esse, sicut semper fui, rei publicae debeo. Quid? 
-                    si ipsas inimicitias, depono rei publicae causa, quis me tandem iure reprehendet, praesertim cum ego omnium 
-                    meorum consiliorum atque factorum exempla semper ex summorum hominum consiliis atque factis mihi censuerim petenda.
-                    </p>
+                <p id = "description_produit"></p>
             </div>
-           
+            <h2 >Plus d'info :</h2>
             <div class="blockdesc">
                 <div>
                     <img class="img_block" src="../img/duree.png">
