--- a/html/apropos.html
+++ b/html/apropos.html
@@ -17,22 +17,13 @@
 
         <section>
             <h1 class="SectionTitle">A propos de nous</h1>
-            <p>Best Travels est une agence de voyage et un tour opérateur français qui propose via son site internet (ci–après, le « Site »), 
-                l’élaboration et la vente de voyages sur mesure à destination du monde entier.
-                Les présentes Conditions Générales d’Utilisation ont vocation à s’appliquer de façon exclusive entre Best Travels et toute personne 
-                souhaitant accéder au Site et /ou utiliser les services proposés depuis le Site.
-                Toute utilisation des services proposés via le Site emporte de plein droit l’application des présentes CGU. 
-                Nous vous invitons à les lire attentivement.
-                Nous vous informons que les dispositions des présentes CGU sont susceptibles d’être modifiées notamment en raison de l’évolution 
-                législative et/ou réglementaire, sans que la responsabilité de Best Travels puisse être recherchée. Les modifications prendront effet à 
-                leur publication sur le Site (sauf indication contraire). La dernière version mise à jour, sera disponible à tous et accessible en permanence 
-                sur le Site, en cliquant sur le lien « A propos & Contact » figurant en bas de page.</p>
+            <p>Locason 38 en Isere</p>
         </div>
         <section>
             <h1 class="SectionTitle">Nous contacter</h1>
             <address>1 Boulevard du voyage 69100 Villeurbanne</address>
             <a href="tel:+33472431700">Nous appeler</a> <br>
-            <a href="mailto:gregory.morel28@gmail.com?subject=Demande de renseignements&body=Bonjour Docteur, je souhaiterais obtenir des renseignements sur">Nous contacter par mail</a>
+            <a href="mailto:test@gmail.com?subject=Demande de renseignements&body=Bonjour Docteur, je souhaiterais obtenir des renseignements sur">Nous contacter par mail</a>
         </div>
 
         <footer id="footer">
