--- a/html/footer.html
+++ b/html/footer.html
@@ -10,9 +10,7 @@
 </head>
 <body>
     <p><a href="apropos.html">A propos & Contact</a></p>
-    <p><a href="linkedin.com">Notre Linkedin</a></p>
-    <p><a href="instagram.com">Notre instagram</a></p>
-    <p><a href="twitter.com">Notre Twitter</a></p>
+    <p><a href="https://instagram.com/locason38?igshid=YzAwZjE1ZTI0Zg">Notre instagram</a></p>
     <p><a href="google.com">Conditions générales d'utilisation</a></p>
     <p><a href="google.com">Traitement des données personnelles</a></p>
 </body>
