--- a/html/reservation.html
+++ b/html/reservation.html
@@ -4,7 +4,8 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Description</title>
+        <title>Locason 38</title>
+        <link rel="icon" href="../img/haut_parleur.png" type="image/png">
         <link rel="stylesheet" href="../css/main.css">
         <link rel="stylesheet" href="../css/reservation.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
