--- a/html/footer.html
+++ b/html/footer.html
@@ -9,8 +9,8 @@
     <title>Document</title>
 </head>
 <body>
+    <p><a href="https://instagram.com/locason38?igshid=YzAwZjE1ZTI0Zg"> <img id="imageInsta" src="../img/instagram.png"></a></p>
     <p><a href="apropos.html">A propos & Contact</a></p>
-    <p><a href="https://instagram.com/locason38?igshid=YzAwZjE1ZTI0Zg">Notre instagram</a></p>
     <p><a href="google.com">Conditions générales d'utilisation</a></p>
     <p><a href="google.com">Traitement des données personnelles</a></p>
 </body>
