--- a/html/index.html
+++ b/html/index.html
@@ -36,9 +36,12 @@
                     <template id="mon_template" > <!--pas affiché par le nav, on va faire ça en js
                         le defer permet de n'exécuter le script qu'après avoir fini de charger la page-->
                         <div class="voyages" class="destination">
-                            <a href="{{lien}}"><img id="imageDest" class="imageDestination" src=""></a>
-                            <h2 class="loc">{{destination}}</h2>
-                            <p>{{prix}} €</p>
+                            <a href="{{lien}}">
+                                <img id="imageDest" class="imageDestination" src="">
+                                <h2 class="loc">{{destination}}</h2>
+                                <p>{{prix}} €</p>
+                            </a>
+                            
                         </div>
                     </template>
                 </div>
