--- a/html/reservation.html
+++ b/html/reservation.html
@@ -21,6 +21,7 @@
         <div class="imgetform">
             <img id ="image_dest" class="img_lieu" src="">
             <h3 id="prix"></h3>
+            <a href="mailto:test@gmail.com?subject=Demande de reservation&body=Bonjour, je souhaiterais reserver cette article :" id="Reserver"> Reserver cet article</a>
         </div>
         <div id="desc">
             <h2 >Details du produit :</h2>
